--- a/style.css
+++ b/style.css
@@ -17,20 +17,16 @@ opacity: 0px;
     margin-left: 150px;
 }
 .btn{
-    margin-left: 1000px;
+margin-left: 1000px;
 color: #FFF;
-width: Hug (191.65px)px;
-height: Hug (57.05px)px;
-top: 49.62px;
-left: 1097px;
+width: 191.65px;
+height: 57.05px;
 padding: 17.53px 37.86px 17.53px 37.86px;
-gap: 7.01px;
-border-radius: 7.01px 0px 0px 0px;
-opacity: 0px;
+
+border-radius: 7.01px;
 background: radial-gradient(101.07% 399.55% at 2.74% 150.27%, #0053B9 0%, #63A9FF 52.29%, #2D7FE4 98.5%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
 box-shadow: 0px 0px 28.74px 0px #136EDE4D;
 border-color: transparent;
-align-items: center;
 }
 
 .whitebox{
