--- a/style.css
+++ b/style.css
@@ -204,12 +204,7 @@ border-image-source: linear-gradient(90deg, rgba(255, 255, 255, 0.24) 0.74%, rgb
 }
 .firstimg{
     background-image: url(firstimg.png);
-    width: 2632.1px;
-height: 1060.54px;
-top: -156.93px;
-left: -596px;
-gap: 0px;
-opacity: 0.42px;
+    background-size: cover;
 }
 .arrowright{
     width: 38px;
